@@ -1,3 +1,12 @@
+2002-11-13  Alan Modra  <amodra@bigpond.net.au>
+
+	Merge from mainline.
+	2002-09-04  Alan Modra  <amodra@bigpond.net.au>
+	* config/tc-ppc.c (PPC_HIGHER, PPC_HIGHEST): Fix warning.
+	(md_parse_option): No -a64 without BFD64.
+	(ppc_set_cpu): Select appropriate cpu when ppc_obj64.
+	(ppc_arch): Use bfd_mach_rs6k for bfd_arch_rs6000.
+
 2002-11-06  Richard Henderson  <rth@redhat.com>
 
         * config/tc-alpha.c (alpha_validate_fix): Move code ...
